--- a/Bureau/Symfony/projet_final/composer.json
+++ b/Bureau/Symfony/projet_final/composer.json
@@ -24,6 +24,7 @@
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
         "doctrine/orm": "^2.5",
+        "friendsofsymfony/user-bundle": "~2.0@dev",
         "incenteev/composer-parameter-handler": "^2.0",
         "phpunit/phpunit": "^5.7",
         "sensio/distribution-bundle": "^5.0",
